--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
  <h2>My group is number 0 and consists of </h2>
  <ul>
-  <Li><a href="https://github.com/Hellocici1211/INST0018_23-24_uczcsz0/blob/main/simple%20HTML5%20page.html">Siyi </a> who love detective novels.</Li>
+  <Li><a href="https://github.com/Hellocici1211/INST0018_23-24_uczcsz0/blob/main/simple%20HTML5%20page.html">Siyi </a> who loves detective novels.</Li>
   <Li><a href="https://github.com/ShuhuaT/INST0018_23-24_uczcst0/blob/main/index.html"Shuhua</a> who enjoys reading.</Li>
  </ul>
 </body>
