--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
 
 <h4> You can find me on <a href="https://twitter.com/KevinBinKai">Twitter</a> or e-mail(zczqbm0@ucl.ac.uk). </h4> 
 
-
+<h2>I am a group of 5.</h2>
+ <p><a href="https://leah67.github.io/INST0018_23-24_zczqzx/">Zimu </a>who loves painting.</p>
