--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
  <title>Binkai</title>
 </head>
 <body>
- <h1>Binkai</h1>
+ <h1 style="color: blue;">Binkai</h1>
  <p>My name is Binkai Ma. </p>
 
  <p>I come from Beijing, China. </p>
 
- <p> I studied at the University of Missouri from 2021 to 2023.</p>
+ <p style="font-weight: bold;"> I studied at the University of Missouri from 2021 to 2023.</p>
 
  <p> I was a journalism student. You can find my works <a href="https://www.columbiamissourian.com/users/profile/kevin%20ma/"> here</a>.</p>
 
