--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
  <title>Binkai</title>
 </head>
 <body>
  <h1 style="color: blue;">Binkai</h1>
  <p>My name is Binkai Ma. </p>
-
+ 
+ <p>You'd say that in Chinese as <span lang="zh-Hans">马彬凯</span>.</p>
+ 
  <p>I come from Beijing, China. </p>
 
  <p style="font-weight: bold;"> I studied at the University of Missouri from 2021 to 2023.</p>
